tests/e2e/unary_complex_5.error
Error: syntax error in story at line 1, column 5

1|    a = not (my_service command k1: not b) or not(my_service2 command k2: not not c)
          ^

E0122: `any` can't be converted to `boolean`
