tests/e2e/unary_complex_5.story
a = not (my_service command k1: not b) or not(my_service2 command k2: not not c)
